<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_template_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/title_template_login"
        android:textAlignment="center"
        android:textColor="@color/light_orange"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/subtitle_template_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_template_login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/light_orange"
        android:textSize="28sp" />

    <ImageView
        android:id="@+id/sleep_astronaut"
        android:layout_width="154dp"
        android:layout_height="141dp"
        android:layout_marginBottom="5dp"
        app:srcCompat="@drawable/air_blast_astronaut" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="44dp" />

    <TextView
        android:id="@+id/introduction_login_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/introduction_login_template"
        android:textAlignment="textEnd"
        android:textColor="@color/light_yellow"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/input_pseudo"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/light_yellow"
        android:hint="Pseudo..."
        android:inputType="text"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/black_purple"
        android:textColorHighlight="@color/light_yellow"
        android:textColorHint="@color/placeholder_gray"
        android:textColorLink="@color/light_yellow"
        android:textSize="14sp" />

    <Button
        android:id="@+id/launch_btn_login"
        android:onClick="buttonClicked"
        android:text="@string/launch_btn_login"
        app:cornerRadius="15dp"
        style="@style/black_purple_btn_style" />

    <TextView
        android:id="@+id/text_unexist_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="10dp"
        android:text="@string/text_unexist_account"
        android:textAlignment="textEnd"
        android:textColor="@color/light_yellow"
        android:textStyle="italic" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_yellow"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:shadowRadius="2.3"
        android:text="@string/register_btn"
        android:textAlignment="center"
        android:textColor="@color/black_purple"
        app:cornerRadius="15dp" />

</LinearLayout>